--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "scripts": {
         "start": "egg-scripts start --daemon --title=egg-server-cs-egg-app",
-        "stop": "egg-scripts stop --title=egg-server-cs-egg-app",
+        "stop": "egg-scripts stop --title=egg-server-cs-egg-app ---sticky --workers=1",
         "dev": "egg-bin dev",
         "debug": "egg-bin debug",
         "test": "npm run lint -- --fix && npm run test-local",
